Extract submodules application, domain, infrastructure and shared

--- a/code/main/build.gradle
+++ b/code/main/build.gradle
@@ -5,7 +5,10 @@ plugins {
 mainClassName = 'com.github.immortaleeb.hearts.Application'
 
 dependencies {
-    implementation project(':code:write')
+    implementation project(':code:write:application')
+    implementation project(':code:write:domain')
+    implementation project(':code:write:infrastructure')
+    implementation project(':code:write:shared')
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
