--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'hearts'
 
-include ':code:main', ':code:write'
+include ':code:main',
+        ':code:write:application',
+        ':code:write:domain',
+        ':code:write:infrastructure',
+        ':code:write:shared'
