Move tests to respective submodules

--- a/code/build.gradle
+++ b/code/build.gradle
@@ -31,4 +31,10 @@ subprojects {
     repositories {
         mavenCentral()
     }
+
+    dependencies {
+        testImplementation 'org.hamcrest:hamcrest:2.2'
+        testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
+        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+    }
 }
