--- a/code/write/application/build.gradle
+++ b/code/write/application/build.gradle
@@ -1,8 +1,12 @@
 plugins {
     id 'java-library'
+    id 'java-test-fixtures'
 }
 
 dependencies {
     implementation project(':code:write:domain')
     implementation project(':code:write:shared')
+
+    testFixturesImplementation project(':code:write:domain')
+    testFixturesImplementation project(':code:write:shared')
 }
