Automatically pass cards after cards are dealt

--- a/code/write/infrastructure/build.gradle
+++ b/code/write/infrastructure/build.gradle
@@ -6,4 +6,6 @@ dependencies {
     implementation project(':code:write:application')
     implementation project(':code:write:domain')
     implementation project(':code:write:shared')
+
+    testImplementation(testFixtures(project(':code:write:application')))
 }
