Create infra modules for event store

--- a/code/main/build.gradle
+++ b/code/main/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     implementation project(':code:write:application')
     implementation project(':code:write:domain')
     implementation project(':code:write:infrastructure')
+    implementation project(':code:write:infrastructure:outgoing:eventstore:inmemory')
     implementation project(':code:write:shared')
 }
