--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include ':code:main',
         ':code:write:domain',
         ':code:write:infrastructure',
         ':code:write:infrastructure:incoming:cli',
+        ':code:write:infrastructure:outgoing:eventsourcing',
         ':code:write:infrastructure:outgoing:eventstore:api',
         ':code:write:infrastructure:outgoing:eventstore:inmemory',
         ':code:write:shared'
