Create infra module for cli

--- a/code/main/build.gradle
+++ b/code/main/build.gradle
@@ -7,8 +7,9 @@ mainClassName = 'com.github.immortaleeb.hearts.Application'
 dependencies {
     implementation project(':code:write:application')
     implementation project(':code:write:domain')
-    implementation project(':code:write:infrastructure')
+    implementation project(':code:write:shared')
+
+    implementation project(':code:write:infrastructure:incoming:cli')
     implementation project(':code:write:infrastructure:outgoing:eventsourcing')
     implementation project(':code:write:infrastructure:outgoing:eventstore:inmemory')
-    implementation project(':code:write:shared')
 }
