Make command handling more generic

--- a/code/hearts/write/application/api/build.gradle
+++ b/code/hearts/write/application/api/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 dependencies {
+    api project(':code:common:application:api')
+
     implementation project(':code:hearts:write:domain')
     implementation project(':code:hearts:write:shared')
 
