--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'hearts'
 
 include ':code:main',
+        ':code:common:application:api',
         ':code:hearts:write:application:api',
         ':code:hearts:write:application:usecase',
         ':code:hearts:write:domain',
