--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,6 @@ include ':code:main',
         ':code:lobby:application:api',
         ':code:lobby:application:usecase',
         ':code:lobby:domain',
+        ':code:lobby:infrastructure:incoming:rest',
         ':code:lobby:infrastructure:outgoing:inmemory',
         ':code:lobby:shared'
