Add a controller to start a game

--- a/code/main/build.gradle
+++ b/code/main/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':code:hearts:write:shared')
 
     implementation project(':code:hearts:write:infrastructure:incoming:cli')
+    implementation project(':code:hearts:write:infrastructure:incoming:rest')
     implementation project(':code:hearts:write:infrastructure:outgoing:eventsourcing')
     implementation project(':code:hearts:write:infrastructure:outgoing:eventstore:inmemory')
 
