--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include ':code:main',
         ':code:hearts:write:application:usecase',
         ':code:hearts:write:domain',
         ':code:hearts:write:infrastructure:incoming:cli',
+        ':code:hearts:write:infrastructure:incoming:rest',
         ':code:hearts:write:infrastructure:outgoing:eventsourcing',
         ':code:hearts:write:infrastructure:outgoing:eventstore:api',
         ':code:hearts:write:infrastructure:outgoing:eventstore:inmemory',
