--- a/code/hearts/write/infrastructure/incoming/rest/build.gradle
+++ b/code/hearts/write/infrastructure/incoming/rest/build.gradle
@@ -5,10 +5,9 @@ plugins {
 }
 
 dependencies {
-    implementation project(":code:common:application:api")
-    implementation project(":code:lobby:application:api")
-    implementation project(":code:common:shared")
-    implementation project(":code:lobby:shared")
+    implementation project(':code:hearts:write:application:api')
+    implementation project(':code:hearts:write:domain')
+    implementation project(':code:hearts:write:shared')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
