--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,9 @@ include ':code:main',
         ':code:common:application:api',
         ':code:common:shared',
         ':code:hearts:common:shared',
+        ':code:hearts:common:infrastructure:projection:api',
+        ':code:hearts:common:infrastructure:projection:inmemory',
+        ':code:hearts:read:infrastructure:incoming:rest',
         ':code:hearts:write:application:api',
         ':code:hearts:write:application:usecase',
         ':code:hearts:write:domain',
@@ -12,6 +15,7 @@ include ':code:main',
         ':code:hearts:write:infrastructure:outgoing:eventsourcing',
         ':code:hearts:write:infrastructure:outgoing:eventstore:api',
         ':code:hearts:write:infrastructure:outgoing:eventstore:inmemory',
+        ':code:hearts:write:infrastructure:outgoing:projection',
         ':code:hearts:write:shared',
         ':code:lobby:application:api',
         ':code:lobby:application:usecase',
